feat(access) role based access control - updated swagger documentation
