# docs/swagger.yml
@@ -278,6 +278,11 @@ paths:
         - bearerAuth: []
       operationId: updateArticle
       parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
         - name: slug
           in: path
           required: true
@@ -300,6 +305,11 @@ paths:
         - bearerAuth: []
       operationId: deleteArticle
       parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
         - name: slug
           in: path
           required: true
@@ -319,6 +329,11 @@ paths:
       description: Add Comments to an Article
       operationId: commentArticle
       parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
         - name: slug
           in: path
           required: true
@@ -411,6 +426,229 @@ paths:
           description: return an unfavorited article
           schema:
             $ref: '#/definitions/article'
+  /articles/{articleSlug}/rating:
+   post:
+    tags:
+     - 'Articles'
+    summary: Rate a specific article
+    security:
+        - bearerAuth: []
+    operationId: rateArticle
+    parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
+        - name: articleSlug
+          in: path
+          required: true
+          type: string
+    responses:
+      '200':
+        description: return rating information
+        schema:
+         $ref: '#/definitions/rating'
+   delete:
+    tags:
+     - 'Articles'
+    summary: delete rating from an article
+    security:
+      - bearerAuth: []
+    operationId: deleteRating
+    parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
+        - name: articleSlug
+          in: path
+          required: true
+          type: string
+    responses:
+      '200':
+       description: return message
+       schema:
+         type: object
+         properties:
+           status:
+            type: string
+           message:
+            type: string
+   get:
+    tags:
+     - 'Articles'
+    summary: Get all ratings for a specific article
+    operationId: getAllRating
+    parameters:
+        - name: articleSlug
+          in: path
+          required: true
+          type: string
+    responses:
+      '200':
+       description: return ratings information
+       schema:
+        $ref: '#/definitions/allRatings'
+  /articles/{slug}/like:
+    post:
+      tags:
+       - 'Articles'
+      summary: Like a specific article
+      security:
+      - bearerAuth: []
+      operationId: likeArticle
+      parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
+        - name: slug
+          in: path
+          required: true
+          type: string
+      responses:
+       '200':
+        description: return an article
+        schema: 
+         $ref: '#/definitions/article'
+  /articles/{slug}/dislike:
+    post:
+      tags:
+       - 'Articles'
+      summary: Dislike a specific article
+      security:
+      - bearerAuth: []
+      operationId: dislikeArticle
+      parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
+        - name: slug
+          in: path
+          required: true
+          type: string
+      responses:
+       '200':
+        description: return an article
+        schema: 
+         $ref: '#/definitions/article'
+  /articles/{slug}/share/twitter:
+    get:
+     tags:
+      - 'Articles'
+     summary: Share article via twitter
+     security: 
+      - bearerAuth: []
+     operationId: shareViaTwitter
+     parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
+        - name: slug
+          in: path
+          required: true
+          type: string
+     responses:
+      '200':
+        description: return message
+        schema:
+          type: object
+          properties:
+           status: 
+            type: number
+           message:
+            type: string
+  /articles/{slug}/share/facebook:
+    get:
+     tags:
+      - 'Articles'
+     summary: Share article via facebook
+     security: 
+      - bearerAuth: []
+     operationId: shareViaFacebook
+     parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
+        - name: slug
+          in: path
+          required: true
+          type: string
+     responses:
+      '200':
+        description: return message
+        schema:
+          type: object
+          properties:
+           status: 
+            type: number
+           message:
+            type: string
+  /articles/{slug}/share/linkedin:
+    get:
+     tags:
+      - 'Articles'
+     summary: Share article via linkedin
+     security: 
+      - bearerAuth: []
+     operationId: shareViaLinkedin
+     parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
+        - name: slug
+          in: path
+          required: true
+          type: string
+     responses:
+      '200':
+        description: return message
+        schema:
+          type: object
+          properties:
+           status: 
+            type: number
+           message:
+            type: string
+  /articles/{slug}/share/email:
+    get:
+     tags:
+      - 'Articles'
+     summary: Share article via email
+     security: 
+      - bearerAuth: []
+     operationId: shareViaEmail
+     parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
+        - name: slug
+          in: path
+          required: true
+          type: string
+     responses:
+      '200':
+        description: return message
+        schema:
+          type: object
+          properties:
+           status: 
+            type: number
+           message:
+            type: string
   /tags:
     get:
       tags:
@@ -422,6 +660,105 @@ paths:
           description: returns an array of all the tags
           schema:
             $ref: '#/definitions/tags'
+  /articles/{articleSlug}/comments/{commentId}/like:
+    post:
+      tags:
+      - 'Articles'
+      summary: Like a comment
+      operationId: likeComment
+      parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
+        - name: articleSlug
+          in: path
+          required: true
+          type: string
+        - name: commentId
+          in: path
+          required: true
+          type: string
+      responses:
+       '200':
+         description: returns like information
+         schema:
+           $ref: '#/definitions/likeComment'
+    get:
+     tags:
+     - 'Articles'
+     summary: Get all likes for a given comment
+     operationId: getAllLikes
+     parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
+        - name: articleSlug
+          in: path
+          required: true
+          type: string
+        - name: commentId
+          in: path
+          required: true
+          type: string
+     responses:
+      '200':
+       description: returns all dislikes for a given comment
+       schema:
+        $ref: '#/definitions/allDislikeComments'
+  /articles/{articleSlug}/comments/{commentId}/dislike:
+    post:
+      tags:
+      - 'Articles'
+      summary: Like a comment
+      operationId: dislikeComment
+      parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
+        - name: articleSlug
+          in: path
+          required: true
+          type: string
+        - name: commentId
+          in: path
+          required: true
+          type: string
+      responses:
+       '200':
+         description: returns like information
+         schema:
+           $ref: '#/definitions/dislikeComment'
+    get:
+     tags:
+     - 'Articles'
+     summary: Get all dislike for a given comment
+     operationId: getAllDislikes
+     parameters:
+        - name: Authorization
+          in: header
+          description: JWT Token
+          required: true
+          type: string
+        - name: articleSlug
+          in: path
+          required: true
+          type: string
+        - name: commentId
+          in: path
+          required: true
+          type: string
+     responses:
+      '200':
+       description: returns all dislikes for a given comment
+       schema:
+        $ref: '#/definitions/allDislikeComments'
+     
 definitions:
   user:
     type: object
@@ -443,7 +780,7 @@ definitions:
       gender:
         type: string
       birthDate:
-        type: date
+        type: string
         example: '2019-01-07'
       bio:
         type: string
@@ -646,3 +983,90 @@ definitions:
             type: string
     required:
       - comment
+  rating:
+   type: object
+   properties:
+     rate:
+      type: number
+  allRatings:
+   type: object
+   properties:
+    status:
+     type: number
+    message:
+     type: string
+    averageRate:
+     type: number
+    ratings:
+     type: array
+     items:
+       type: object
+       properties:
+        id:
+         type: string
+        userId:
+         type: string
+        rating:
+         type: number
+        articleId:
+         type: string
+  likeComment:
+   type: object
+   properties:
+    status:
+     type: number
+    message: 
+     type: string
+    like:
+     type: object
+     properties:
+      id:
+       type: string
+      userId:
+       type: string
+      commentId:
+       type: string
+      value:
+       type: string
+  dislikeComment:
+   type: object
+   properties:
+    status:
+     type: number
+    message: 
+     type: string
+    dislike:
+     type: object
+     properties:
+      id:
+       type: string
+      userId:
+       type: string
+      commentId:
+       type: string
+      value:
+       type: string
+  allDislikeComments:
+   type: object
+   properties:
+    status:
+     type: number
+    counts: 
+     type: number
+    dislikes: 
+     type: array
+     items:
+       type: object
+       properties:
+        id:
+         type: string
+        userId:
+         type: string
+        commentId:
+         type: string
+        value:
+         type: string
+    page:
+     type: number
+    pages:
+     type: number
