# routes/api/articles.js
@@ -64,15 +64,6 @@ router.get(
   verifyJwt(),
   asyncHandler(CommentController.getArticleComments),
 );
-router
-  .route('/:articleSlug/rating')
-  .post(
-    celebrate({ body: ratingValidator }),
-    verifyJwt(),
-    asyncHandler(RatingController.rateArticle),
-  )
-  .delete(verifyJwt(), asyncHandler(RatingController.deleteRating))
-  .get(asyncHandler(RatingController.getAllRating));
 
 router.post('/:slug/like', verifyJwt(), asyncHandler(ArticleController.likeArticle));
 
